src/snapshots/hemlis_lib__parser__tests__expr_record_construct.snap
---
source: src/parser.rs
expression: "p_expr(\"foo { a : 1 }\")"
---
13 of 13
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Ident
      QName
       NULL
       Name
        (2, 4)->(2, 7)
     Expr::Record
      (2, 8)->(2, 9)
       RecordLabelExpr::Field
        Label
         (2, 10)->(2, 11)
        Expr::Number
         Number
          (2, 14)->(2, 15)
      (2, 0)->(2, 0)
===
