src/snapshots/hemlis_lib__parser__tests__expr_record_update_full.snap
---
source: src/parser.rs
expression: "p_expr(\"foo { a = 1, b = { c = 1 }, d = { e: 1 } }\")"
---
29 of 29
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  (0, 0)->(0, 6)
  (0, 12)->(0, 17)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Update
     Expr::Ident
      QName
       NULL
       Name
        (2, 4)->(2, 7)
      RecordUpdate::Leaf
       Label
        (2, 10)->(2, 11)
       Expr::Number
        Number
         (2, 14)->(2, 15)
      RecordUpdate::Branch
       Label
        (2, 17)->(2, 18)
        RecordUpdate::Leaf
         Label
          (2, 23)->(2, 24)
         Expr::Number
          Number
           (2, 27)->(2, 28)
      RecordUpdate::Leaf
       Label
        (2, 32)->(2, 33)
       Expr::Record
        (2, 36)->(2, 37)
         RecordLabelExpr::Field
          Label
           (2, 38)->(2, 39)
          Expr::Number
           Number
            (2, 41)->(2, 42)
        (2, 45)->(2, 46)
===
