src/snapshots/hemlis_lib__parser__tests__expr_simple.snap
---
source: src/parser.rs
expression: "p_expr(\"1 + 1\")"
---
10 of 10
===
Module
 Header
  MName
   (0, 7)->(0, 11)
  NULL
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Op
     Expr::Number
      Number
       (2, 4)->(2, 5)
     QOp
      NULL
      Op
       (2, 6)->(2, 7)
     Expr::Number
      Number
       (2, 8)->(2, 9)
===
