src/snapshots/hemlis_lib__parser__tests__minimal_f.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule F () where\nderive newtype instance Eq Tag\n\")"
---
12 of 12
===
Module
 Header
  MName
   (1, 7)->(1, 8)
  Decl::Derive
   InstHead
    NULL
    QProperName
     NULL
     ProperName
      (2, 24)->(2, 26)
     Typ::Constructor
      QProperName
       NULL
       ProperName
        (2, 27)->(2, 30)
===
